# data-contract-enforcer

./: .gitignore  README.md  pyproject.toml
contracts/: generator.py  runner.py
enforcer_report/: report_data.json
generated_contracts/: week3_verdicts.yaml  week3_verdicts_dbt.yml  week5_events.yaml  week5_events_dbt.yml
outputs/week3/: verdicts.jsonl  verdicts_violated.jsonl
outputs/week4/: lineage_snapshots.jsonl
outputs/week5/: events.jsonl
schema_snapshots/: baselines.json  embedding_baselines.json
schema_snapshots/week3-automaton-auditor-verdicts/: 20260404_124607.yaml  20260404_125232.yaml
validation_reports/: ai_extensions.json  ai_extensions_violated.json  schema_evolution.json  week3_verdicts_20260401_194405.json  week3_verdicts_20260404_125443.json  week3_verdicts_20260404_130246.json  week5_events_20260401_194422.json
violation_log/: violations.jsonl
