[project]
name = "data-contract-enforcer"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "numpy",
    "pyyaml",
    "anthropic",
    "python-dotenv",
    "jsonschema",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]
include = ["contracts*"]
